<resources>

    <string name="app_name">TeamSync</string>
    <string name="app_slogan">Syncing Teams,\nStreamlining Success</string>

    <!--SignIn Activity-->
    <string name="continue_as_admin">Continue As Admin</string>
    <string name="or">Or</string>
    <string name="continue_as_volunteer">Continue As Volunteer</string>
    <string name="waiting_for_approval">Waiting for approval from admins..</string>
    <string name="waiting_for_approval_msg">Please wait till admins verify and approve your account. This may take few hours..</string>

    <!--Volunteer Dashboard-->
    <string name="teams">Teams</string>
    <string name="sort_by">Sort By</string>
    <string name="call_leader">Call Leader</string>
    <string name="email_leader">Email Leader</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="present">Is Present</string>
    <string name="got_kit">Got Kit</string>

    <string name="home">Home</string>
    <string name="meal_scanner">Meal</string>
    <string name="rest_scanner">Rest Room</string>
    <string name="permitted_zones">Permitted Zones</string>
    <string name="committee">Committee</string>

    <!--Scanner Activity-->
    <string name="scanner">Scanner</string>
    <string name="team_uid">Team UID</string>
    <string name="force_search">Force Search</string>
    <string name="team">Team,</string>
    <string name="update">Update</string>

    <string-array name="day_list">
        <item>2024-08-30</item>
        <item>2024-08-31</item>
        <item>2024-09-01</item>
    </string-array>

    <string-array name="food_list">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="user_type">
        <item>Admin</item>
        <item>Volunteer</item>
    </string-array>

    <string-array name="status">
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>

</resources>