<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_permittedZone"
        android:icon="@drawable/ic_pin"
        android:title="@string/permitted_zones" />

    <item android:title="Manage">
        <menu>
            <item
                android:id="@+id/nav_manageCommittee"
                android:icon="@drawable/ic_committee"
                android:title="@string/committee" />

            <item
                android:id="@+id/nav_manageTeam"
                android:icon="@drawable/ic_team_2"
                android:title="@string/teams" />

        </menu>
    </item>

    <item android:title="Scanner">
        <menu>
            <item
                android:id="@+id/nav_mealScanner"
                android:icon="@drawable/ic_scanner"
                android:title="@string/meal_scanner" />

            <item
                android:id="@+id/nav_restRoomScanner"
                android:icon="@drawable/ic_scanner"
                android:title="@string/rest_scanner" />
        </menu>
    </item>

</menu>