<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        android:backgroundTint="#192538">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp"
                android:text="@string/scanner"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/_14ssp"
                app:drawableStartCompat="@drawable/ic_arrow_back" />

            <Spinner
                android:id="@+id/spinner_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/outline_box"
                android:entries="@array/day_list"
                android:padding="@dimen/_5sdp"
                android:spinnerMode="dialog" />

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_below="@+id/btn_back"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp" />

            <EditText
                android:id="@+id/et_teamUid"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/btn_back"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_toEndOf="@id/previewView"
                android:background="@drawable/outline_box"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/team_uid"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forceSearch"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/et_teamUid"
                android:layout_alignStart="@id/et_teamUid"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/primary_gradient_button"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTint="@color/white"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/force_search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/team"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_teamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Name of the team"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_team" />

                <Spinner
                    android:id="@+id/spinner_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_box"
                    android:entries="@array/food_list"
                    android:padding="@dimen/_5sdp"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="@id/tv_teamName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_team" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_teamMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/tv_teamName"
                tools:listitem="@layout/item_team_member" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="124dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/primary_gradient_button"
                android:drawableTint="@color/white"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>